k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whiteboard
  labels:
    name: whiteboard
